--- a/force-app/main/default/classes/TestData.cls
+++ b/force-app/main/default/classes/TestData.cls
@@ -30,7 +30,7 @@ public class TestData {
         }
         ctp = [SELECT Id, Therapeutic_Area__c FROM Clinical_Trial_Profile__c WHERE NCT_Number__c = 'NCT00000001'];
         ss = [SELECT Id FROM Study_Site__c WHERE Clinical_Trial_Profile__c =: ctp.Id];
-        pe = [SELECT Id FROM Participant_Enrollment__c WHERE Participant__c =: participant.Id];
+        pe = [SELECT Id, Participant_Contact__c FROM Participant_Enrollment__c WHERE Participant__c =: participant.Id];
     }
     
     public void createPSE(){
