--- a/force-app/main/default/classes/VisitService.cls
+++ b/force-app/main/default/classes/VisitService.cls
@@ -23,6 +23,14 @@ public inherited sharing class VisitService {
         return getVisits(null, 3);
     }
 
+    public static Patient_Visit__c createPatientVisit(Visit__c visit, Id pseId){
+        return new Patient_Visit__c(
+                Visit__c = visit.Id,
+                Visit_Schedule__c = visit.Visit_Schedule__c,
+                Visit_Number__c = visit.Visit_Number__c,
+                Participant_Study_Enrollment__c =  pseId
+        );
+    }
     private List<Visit__c> getVisits(String filter, Integer limitNumber) {
 
         ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
