new PI functionality  REF-304, REF-274, REF-267, REF - 250, REF-205, REF-194, REF-174

--- a/force-app/main/default/classes/StudyDetailItem.cls
+++ b/force-app/main/default/classes/StudyDetailItem.cls
@@ -22,6 +22,8 @@ public class StudyDetailItem implements Comparable {
     public String therapeuticArea;
     public Datetime maxHCPCreatedDate;
     public Boolean hasPatients;
+    public List<Study_Site__c> ssList;
+    public String primaryContactName;
 
     public Integer compareTo(Object compareTo) {
         StudyDetailItem compareItem = (StudyDetailItem) compareTo;
